Fix: FAQ section font-size on smaller screens

--- a/src/sections/FAQ/FAQ.module.scss
+++ b/src/sections/FAQ/FAQ.module.scss
@@ -46,8 +46,10 @@
                 transition: max-height var(--transition-time);
                 .answer {
                     padding: 1rem 3rem;
+                    font-size: 1.5rem;
                     @media (max-width: 1024px) {
                         padding: 0.5rem 1.5rem;
+                        font-size: 0.8rem;
                     }
                 }
             }
